# tutorial

./: .gitignore
tutorial/: Analyse.cpp  CMakeLists.txt  README.txt  dummy.root  matcher.json
tutorial/raw_data/: .3Alpha_Al_1063.log.swp
tutorial/setup/: Det2.cal  setup.json
tutorial/sorted_data/: 3Alpha_Al_1063m.root
